--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "embla-carousel-react": "^8.6.0",
+    "lenis": "^1.3.11",
     "next": "15.5.4",
     "ogl": "^1.0.11",
     "react": "19.1.0",
