--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@tabler/icons-react": "^3.35.0",
     "class-variance-authority": "^0.7.1",
     "embla-carousel-react": "^8.6.0",
