--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tabler/icons-react": "^3.35.0",
     "class-variance-authority": "^0.7.1",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
     "lenis": "^1.3.11",
     "lucide-react": "^0.545.0",
