--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
     "mysql2": "^3.15.3",
+    "nodemailer": "^7.0.10",
     "nodemon": "^3.1.11",
     "pg": "^8.16.3",
     "prisma": "^6.19.0"
