--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,12 @@
   "dependencies": {
     "@prisma/client": "^6.19.0",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
     "mysql2": "^3.15.3",
