--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^6.19.0",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.13.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
