--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@studio-freight/lenis": "^1.0.42",
     "@tabler/icons-react": "^3.35.0",
+    "animejs": "^4.2.2",
     "class-variance-authority": "^0.7.1",
     "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
+    "gsap": "^3.13.0",
     "lenis": "^1.3.11",
     "lucide-react": "^0.545.0",
     "motion": "^12.23.24",
