--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,14 @@
   "main": "src/server.js",
   "type": "module",
   "scripts": {
+    "start": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/server.js",
+    "build": "npm run prisma:generate",
     "prisma:generate": "node prisma_generate.js",
     "prisma:migrate": "dotenv -e .env -- npx prisma migrate dev",
     "prisma:studio": "npx dotenv -e .env -- prisma studio",
-    "prisma:seed": "node prisma/seed.js",
-    "start": "nodemon src/server.js"
+    "prisma:seed": "node prisma/seed.js"
   },
   "keywords": [],
   "author": "",
