--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.js",
     "build": "npm run prisma:generate",
+    "vercel-build": "npx prisma generate",
     "prisma:generate": "node prisma_generate.js",
     "prisma:migrate": "dotenv -e .env -- npx prisma migrate dev",
     "prisma:studio": "npx dotenv -e .env -- prisma studio",
