--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend/src/server.js",
+      "src": "backend/package.json",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "backend/src/server.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "backend/src/server.js"
+      "dest": "/api/index.js"
     }
   ]
 }
