--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend/package.json",
+      "src": "api/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/(.*)",
       "dest": "/api/index.js"
     }
   ]
