--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,6 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "backend/src/server.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "backend/src/server.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "backend/src/server.js"
-    }
-  ]
+  "buildCommand": "cd backend && npm install && npx prisma generate",
+  "installCommand": "npm install",
+  "framework": null,
+  "outputDirectory": "api"
 }
