feat: Enable Vercel deployment for backend API with serverless function and routing.

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,15 @@
 {
-  "buildCommand": "cd backend && npm install && npx prisma generate",
-  "installCommand": "npm install",
-  "framework": null,
-  "outputDirectory": "api"
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/api/index.js"
+    }
+  ]
 }
