--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "cd backend && npm install && npx prisma generate"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
