--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-  "version": 2,
-  "installCommand": "npm install && cd backend && npm ci && npx prisma generate",
-  "functions": {
-    "api/*.js": {
-      "runtime": "nodejs20.x"
-    }
-  }
+  "installCommand": "npm install && cd backend && npm ci && npx prisma generate"
 }
