--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,18 @@
 {
-  "installCommand": "npm install && cd backend && npm ci && npx prisma generate"
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/api/index.js"
+    }
+  ],
+  "installCommand": "cd backend && npm ci && npx prisma generate",
+  "buildCommand": "echo 'Backend only - no build needed'",
+  "outputDirectory": "api"
 }
