--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,7 @@
     }
   ],
   "installCommand": "cd backend && npm ci --only=production && npx prisma generate",
-  "buildCommand": "echo 'Backend only - no build needed'",
+  "buildCommand": "mkdir -p dist && echo 'Backend Online' > dist/index.html",
+  "outputDirectory": "dist",
   "framework": null
 }
