--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,13 @@
   ],
   "functions": {
     "api/index.js": {
-      "includeFiles": "backend/**"
+      "includeFiles": [
+        "backend/src/**",
+        "backend/package.json",
+        "backend/prisma/schema.prisma",
+        "backend/node_modules/.prisma/**",
+        "backend/node_modules/@prisma/**"
+      ]
     }
   },
   "installCommand": "cd backend && npm ci --only=production && npx prisma generate",
