--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@studio-freight/lenis": "^1.0.42",
     "@tabler/icons-react": "^3.35.0",
     "animejs": "^4.2.2",
@@ -28,6 +31,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.167.1",
     "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
