--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
   "buildCommand": "npm run build",
-  "startCommand": "npm run start"
+  "outputDirectory": ".next",
+  "framework": "nextjs",
+  "installCommand": "npm install",
+  "devCommand": "npm run dev",
+  "ignoreCommand": "git diff --quiet HEAD^ HEAD ./"
 }
