--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,5 @@
   "outputDirectory": ".next",
   "framework": "nextjs",
   "installCommand": "npm install",
-  "devCommand": "npm run dev",
-  "ignoreCommand": "git diff --quiet HEAD^ HEAD ./"
+  "devCommand": "npm run dev"
 }
